remove: add coord button border

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body class="bg-amber-950">
     <div class="flex justify-center w-full mb-4">
-        <button id="newCoordBtn" class="w-full text-gray-700 outline-none focus:outline-none py-4 border-2 border-amber-950 bg-neutral-300  text-2xl cursor-pointer">Nova Coordenada</button>
+        <button id="newCoordBtn" class="w-full text-gray-700 outline-none focus:outline-none py-4 bg-neutral-300 text-2xl cursor-pointer">Nova Coordenada</button>
     </div>
 
-    <dialog id="newCoordDialog" class="open:flex outline-none focus:outline-none text-gray-700 flex-col text-2xl md:text-xl w-screen md:w-fit max-w-none h-screen max-h-none p-0 items-center m-auto">
+    <dialog id="newCoordDialog" class="open:flex outline-none focus:outline-none text-gray-700 flex-col text-2xl md:text-xl w-screen md:w-[50%] max-w-none h-screen max-h-none p-0 items-center m-auto">
         <div class="w-[50%] mb-4 mt-2 flex justify-start">
             <svg id="closeDialog" xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#000000"><path d="m249-207-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg>
         </div>
