--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <dialog id="newCoordDialog" class="open:flex outline-none focus:outline-none text-gray-700 flex-col text-2xl md:text-xl w-screen md:w-[50%] max-w-none h-screen max-h-none p-0 items-center m-auto">
-        <div class="w-[50%] mb-4 mt-2 flex justify-start">
+        <div class="w-full cursor-pointer  mb-4 mt-2 flex justify-start">
             <svg id="closeDialog" xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#000000"><path d="m249-207-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg>
         </div>
 
